name: Kitten
version: 0.1
cabal-version: >= 1.8
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2012 (C) 2012 Jon Purdy
author: Jon Purdy
maintainer: Jon Purdy <evincarofautumn@gmail.com>
stability: alpha
homepage: http://kittenlang.org/
bug-reports: https://github.com/evincarofautumn/kitten/issues
synopsis: A minimalistic concatenative programming language.

library

  build-depends:
    base == 4.*,
    containers == 0.5.*,
    either == 3.4.*,
    parsec == 3.1.*,
    transformers == 0.3.*

  ghc-options:
    -Wall
    -Werror

  hs-source-dirs:
    lib

  exposed-modules:
    Kitten.Anno,
    Kitten.Builtin,
    Kitten.ClosedName,
    Kitten.Compile,
    Kitten.Def,
    Kitten.Error,
    Kitten.Fragment,
    Kitten.Infer,
    Kitten.Infer.Monad,
    Kitten.Infer.Scheme,
    Kitten.Infer.Type,
    Kitten.Infer.Unify,
    Kitten.Interpret,
    Kitten.Interpret.Monad,
    Kitten.Kind,
    Kitten.Location,
    Kitten.Name,
    Kitten.Parse,
    Kitten.Parse.Element,
    Kitten.Parse.Layout,
    Kitten.Parse.Monad,
    Kitten.Parse.Primitive,
    Kitten.Parse.Type,
    Kitten.Parsec,
    Kitten.Resolve,
    Kitten.Resolve.Monad,
    Kitten.Resolved,
    Kitten.Scope,
    Kitten.Term,
    Kitten.Token,
    Kitten.Tokenize,
    Kitten.Type,
    Kitten.Util.Applicative,
    Kitten.Util.Either,
    Kitten.Util.FailWriter,
    Kitten.Util.Function,
    Kitten.Util.List,
    Kitten.Util.Maybe,
    Kitten.Util.Monad,
    Kitten.Util.Parsec,
    Kitten.Util.Show,
    Kitten.Util.Tuple,
    Kitten.Yarn

executable kitten

  hs-source-dirs:
    src

  main-is:
    Main.hs

  ghc-options:
    -Wall

  build-depends:
    Kitten,
    base,
    cmdargs == 0.10.*,
    directory == 1.2.*,
    filepath == 1.3.*

test-suite test

  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    test

  main-is:
    Test.hs

  build-depends:
    Kitten,
    base,
    containers,
    hspec == 1.4.*,
    HUnit,
    QuickCheck == 2.6.*,
    transformers

  ghc-options:
    -Wall
