name: Kitten
version: 0.1.0.0
synopsis: Kitten Programming Language
homepage: http://kittenlang.org/
license: MIT
author: Jon Purdy
maintainer: evincarofautumn@gmail.com
category: Language
build-type: Simple
cabal-version: >=1.10

executable kitten
  build-depends:

    base >=4.8,

    Kitten,
    bytestring,
    cmdargs,
    containers,
    hashable,
    haskeline,
    parsec,
    pretty,
    text,
    transformers,
    unordered-containers,
    vector

  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: src
  main-is: Main.hs

  other-modules:
    Arguments
    Interact
    Report

library

  build-depends:

    base >=4.8,

    JuicyPixels,
    base64-bytestring,
    bytestring,
    containers,
    hashable,
    parsec,
    pretty,
    recursion-schemes,
    text,
    transformers,
    unordered-containers,
    vector

  default-language: Haskell2010

  exposed-modules:

    Kitten
    Kitten.Base
    Kitten.Bits
    Kitten.Bracket
    Kitten.Closure
    Kitten.DataConstructor
    Kitten.Declaration
    Kitten.Definition
    Kitten.Desugar.Data
    Kitten.Desugar.Infix
    Kitten.Dictionary
    Kitten.Element
    Kitten.Enter
    Kitten.Entry
    Kitten.Entry.Category
    Kitten.Entry.Merge
    Kitten.Entry.Parameter
    Kitten.Entry.Parent
    Kitten.Flatten
    Kitten.Fragment
    Kitten.Free
    Kitten.IO
    Kitten.Indent
    Kitten.Infer
    Kitten.Informer
    Kitten.InstanceCheck
    Kitten.Instantiate
    Kitten.Instantiated
    Kitten.Interpret
    Kitten.Kind
    Kitten.Layoutness
    Kitten.Linearize
    Kitten.Literal
    Kitten.Located
    Kitten.Mangle
    Kitten.Metadata
    Kitten.Monad
    Kitten.Name
    Kitten.Occurrences
    Kitten.Operator
    Kitten.Origin
    Kitten.Parse
    Kitten.Parser
    Kitten.Phase
    Kitten.Platform
    Kitten.Pretty
    Kitten.Quantify
    Kitten.Queue
    Kitten.Regeneralize
    Kitten.Report
    Kitten.Resolve
    Kitten.Signature
    Kitten.Stack
    Kitten.Substitute
    Kitten.Synonym
    Kitten.Term
    Kitten.Text
    Kitten.Token
    Kitten.Tokenize
    Kitten.Type
    Kitten.TypeDefinition
    Kitten.TypeEnv
    Kitten.Unify
    Kitten.Vocabulary
    Kitten.Zonk

  ghc-options: -Wall -O2

  hs-source-dirs: lib

test-suite test
  build-depends:

    base >=4.8,

    HUnit,
    JuicyPixels,
    Kitten,
    base64-bytestring,
    bytestring,
    containers,
    hashable,
    hspec,
    knob,
    parsec,
    pretty,
    recursion-schemes,
    text,
    transformers,
    unordered-containers,
    vector

  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: test, lib

  other-modules:

    Kitten
    Kitten.Base
    Kitten.Bits
    Kitten.Bracket
    Kitten.Closure
    Kitten.DataConstructor
    Kitten.Declaration
    Kitten.Definition
    Kitten.Desugar.Data
    Kitten.Desugar.Infix
    Kitten.Dictionary
    Kitten.Element
    Kitten.Enter
    Kitten.Entry
    Kitten.Entry.Category
    Kitten.Entry.Merge
    Kitten.Entry.Parameter
    Kitten.Entry.Parent
    Kitten.Flatten
    Kitten.Fragment
    Kitten.Free
    Kitten.IO
    Kitten.Indent
    Kitten.Infer
    Kitten.Informer
    Kitten.InstanceCheck
    Kitten.Instantiate
    Kitten.Instantiated
    Kitten.Interpret
    Kitten.Kind
    Kitten.Layoutness
    Kitten.Linearize
    Kitten.Literal
    Kitten.Located
    Kitten.Mangle
    Kitten.Metadata
    Kitten.Monad
    Kitten.Name
    Kitten.Occurrences
    Kitten.Operator
    Kitten.Origin
    Kitten.Parse
    Kitten.Parser
    Kitten.Phase
    Kitten.Platform
    Kitten.Pretty
    Kitten.Quantify
    Kitten.Queue
    Kitten.Regeneralize
    Kitten.Report
    Kitten.Resolve
    Kitten.Signature
    Kitten.Stack
    Kitten.Substitute
    Kitten.Synonym
    Kitten.Term
    Kitten.Text
    Kitten.Token
    Kitten.Tokenize
    Kitten.Type
    Kitten.TypeDefinition
    Kitten.TypeEnv
    Kitten.Unify
    Kitten.Vocabulary
    Kitten.Zonk
    Test.Common
    Test.Infer
    Test.InstanceCheck
    Test.Interpret
    Test.Origin
    Test.Parse
    Test.Resolve
    Test.Tokenize
    Test.Zonk

  main-is: Main.hs
  type: exitcode-stdio-1.0
