name: kitten
version: 0.1
cabal-version: >= 1.8
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2012 (C) 2012 Jon Purdy
author: Jon Purdy
maintainer: Jon Purdy <evincarofautumn@gmail.com>
stability: alpha
homepage: http://kittenlang.org/
bug-reports: https://github.com/evincarofautumn/kitten/issues
synopsis: A minimalistic concatenative programming language.

flag prof
  description: Enable profiling
  default: False

library

  build-depends:
    base == 4.*,
    bytestring,
    containers,
    directory,
    either,
    filepath,
    hashable,
    parsec,
    text,
    transformers,
    unordered-containers,
    vector

  ghc-options:
    -Wall
    -O2

    -- http://ghc.haskell.org/trac/ghc/ticket/5550
    -fno-spec-constr

  if flag(prof)
    ghc-options:
      -fprof-auto

  hs-source-dirs:
    lib

  exposed-modules:

    Kitten.Annotation
    Kitten.C
    Kitten.ClosedName
    Kitten.Compile
    Kitten.Config
    Kitten.Definition
    Kitten.Error
    Kitten.Fragment
    Kitten.HTML
    Kitten.IR
    Kitten.Id
    Kitten.IdMap
    Kitten.Import
    Kitten.Infer
    Kitten.Infer.Locations
    Kitten.Infer.Monad
    Kitten.Infer.Scheme
    Kitten.Infer.Type
    Kitten.Infer.Unify
    Kitten.Interpret
    Kitten.Intrinsic
    Kitten.Kind
    Kitten.KindedId
    Kitten.Location
    Kitten.Name
    Kitten.Operator
    Kitten.Optimize
    Kitten.Parse
    Kitten.Parse.Element
    Kitten.Parse.Layout
    Kitten.Parse.Monad
    Kitten.Parse.Primitive
    Kitten.Parse.Type
    Kitten.Parsec
    Kitten.Program
    Kitten.Resolve
    Kitten.Resolve.Monad
    Kitten.Scope
    Kitten.Term
    Kitten.Token
    Kitten.Tokenize
    Kitten.Type
    Kitten.Type.Tidy
    Kitten.TypeDefinition
    Kitten.Util.Applicative
    Kitten.Util.Either
    Kitten.Util.FailWriter
    Kitten.Util.Function
    Kitten.Util.List
    Kitten.Util.Maybe
    Kitten.Util.Monad
    Kitten.Util.Parsec
    Kitten.Util.Set
    Kitten.Util.Show
    Kitten.Util.Text
    Kitten.Util.Tuple
    Kitten.Util.Vector

executable kitten

  hs-source-dirs:
    src

  main-is:
    Main.hs

  ghc-options:
    -Wall

  if flag(prof)
    ghc-options: -auto-all -prof -rtsopts

  build-depends:
    kitten,
    base,
    bytestring,
    containers,
    cmdargs,
    directory,
    filepath,
    haskeline,
    parsec,
    boxes,
    text,
    transformers,
    unordered-containers,
    vector

test-suite test

  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    test

  main-is:
    Test.hs

  build-depends:
    kitten,
    base,
    containers,
    hspec,
    HUnit,
    parsec,
    QuickCheck,
    text,
    transformers,
    unordered-containers,
    vector

  ghc-options:
    -Wall
