name: Kitten
version: 0.1.0.0
synopsis: Kitten Programming Language
homepage: http://kittenlang.org/
license: MIT
author: Jon Purdy
maintainer: evincarofautumn@gmail.com
category: Language
build-type: Simple
cabal-version: >=1.10

executable kitten
  build-depends: base >=4.8, bytestring, containers, hashable, Kitten, parsec, pretty, text, transformers, unordered-containers, vector
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: src
  main-is: Main.hs

library
  build-depends: base >=4.8, bytestring, containers, hashable, parsec, pretty, text, transformers, unordered-containers, vector
  default-language: Haskell2010

  exposed-modules:

    Kitten
    Kitten.Base
    Kitten.Definition
    Kitten.Desugar.Data
    Kitten.Desugar.Infix
    Kitten.Dictionary
    Kitten.Enter
    Kitten.Entry
    Kitten.Fragment
    Kitten.Infer
    Kitten.Informer
    Kitten.InstanceCheck
    Kitten.Kind
    Kitten.Layout
    Kitten.Located
    Kitten.Monad
    Kitten.Name
    Kitten.Operator
    Kitten.Origin
    Kitten.Parse
    Kitten.Report
    Kitten.Resolve
    Kitten.Scope
    Kitten.Term
    Kitten.Token
    Kitten.Tokenize
    Kitten.Type
    Kitten.TypeEnv
    Kitten.Vocabulary
    Kitten.Zonk

  other-modules:

    Kitten.CollectInstantiations
    Kitten.DataConstructor
    Kitten.Declaration
    Kitten.Desugar.Quotations
    Kitten.Element
    Kitten.Entry.Category
    Kitten.Entry.Merge
    Kitten.Entry.Parameter
    Kitten.Entry.Parent
    Kitten.Free
    Kitten.Indent
    Kitten.Instantiate
    Kitten.Layoutness
    Kitten.Linearize
    Kitten.Mangle
    Kitten.Metadata
    Kitten.Occurrences
    Kitten.Parser
    Kitten.Pretty
    Kitten.Quantify
    Kitten.Queue
    Kitten.Regeneralize
    Kitten.Signature
    Kitten.Substitute
    Kitten.Synonym
    Kitten.TypeDefinition
    Kitten.Unify

  ghc-options: -Wall

  hs-source-dirs: lib

test-suite test
  build-depends: base >=4.8, containers, Kitten, hspec, HUnit, parsec, pretty, text, transformers, unordered-containers
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
