name: Kitten
version: 0.1.0.0
synopsis: Kitten Programming Language
homepage: http://kittenlang.org/
license: MIT
author: Jon Purdy
maintainer: evincarofautumn@gmail.com
category: Language
build-type: Simple
cabal-version: >=1.10

executable kitten
  build-depends:

    base >=4.8,

    Kitten,
    bytestring,
    containers,
    hashable,
    parsec,
    pretty,
    text,
    transformers,
    unordered-containers,
    vector

  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: src
  main-is: Main.hs

library

  build-depends:

    base >=4.8,

    JuicyPixels,
    base64-bytestring,
    bytestring,
    containers,
    hashable,
    parsec,
    pretty,
    text,
    transformers,
    unordered-containers,
    vector

  default-language: Haskell2010

  exposed-modules:

    Kitten
    Kitten.Amd64
    Kitten.Base
    Kitten.Bits
    Kitten.Definition
    Kitten.Dictionary
    Kitten.Enter
    Kitten.Entry
    Kitten.Entry.Parameter
    Kitten.Fragment
    Kitten.IO
    Kitten.Infer
    Kitten.Informer
    Kitten.Instantiated
    Kitten.Interpret
    Kitten.Kind
    Kitten.Located
    Kitten.Mangle
    Kitten.Monad
    Kitten.Name
    Kitten.Origin
    Kitten.Parse
    Kitten.Platform
    Kitten.Pretty
    Kitten.Report
    Kitten.Resolve
    Kitten.Signature
    Kitten.Term
    Kitten.Token
    Kitten.Tokenize
    Kitten.Type
    Kitten.TypeDefinition
    Kitten.TypeEnv
    Kitten.Unify
    Kitten.Vocabulary

  other-modules:

    Kitten.CollectInstantiations
    Kitten.DataConstructor
    Kitten.Declaration
    Kitten.Desugar.Data
    Kitten.Desugar.Infix
    Kitten.Desugar.Quotations
    Kitten.Element
    Kitten.Entry.Category
    Kitten.Entry.Merge
    Kitten.Entry.Parent
    Kitten.Free
    Kitten.Indent
    Kitten.InstanceCheck
    Kitten.Instantiate
    Kitten.Layout
    Kitten.Layoutness
    Kitten.Linearize
    Kitten.Metadata
    Kitten.Occurrences
    Kitten.Operator
    Kitten.Parser
    Kitten.Quantify
    Kitten.Queue
    Kitten.Regeneralize
    Kitten.Scope
    Kitten.Substitute
    Kitten.Synonym
    Kitten.Zonk

  ghc-options: -Wall -O2

  hs-source-dirs: lib

test-suite test
  build-depends:

    base >=4.8,

    HUnit,
    JuicyPixels,
    Kitten,
    base64-bytestring,
    bytestring,
    containers,
    hashable,
    hspec,
    knob,
    parsec,
    pretty,
    text,
    transformers,
    unordered-containers,
    vector

  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: test, lib
  main-is: Main.hs
  type: exitcode-stdio-1.0
